--- a/public/styles/partials/page-landing.css
+++ b/public/styles/partials/page-landing.css
@@ -86,9 +86,12 @@ color: var(--color-text-in-primary);
     margin-left: 0.8rem;
 }
 
-@media (max-width: 699px) {
+@media (max-width: 1100px) {
     :root{
         font-size: 40%;
+    }
+    .hero-image {
+        height: 45rem;
     }
 }
 
