--- a/src/views/study.html
+++ b/src/views/study.html
@@ -75,8 +75,13 @@
 
         <main>
 
+            {% if proffys == "" %}
+                <p class="no-results">Nenhum professor encontrado com a sua pesquisa.</p>
+
+            {%else%}
+
             {%for proffy in proffys%}
-            <article class="teacher-item">
+                <article class="teacher-item">
                 <header>
                     <img src="{{proffy.avatar}}" alt="{{proffy.name}}">
                     <div>
@@ -94,8 +99,10 @@
                         class="button" target="_blank">
                         <img src="images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato</a>
                 </footer>
-            </article>
+                </article>
             {%endfor%}
+
+            {% endif %}
 
         </main>
     </div>
